# NovelLoom

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  alembic.ini  environment.yml  novelloom.config.yaml  pylock.toml  pyproject.toml  setup_path.ps1
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260621_0001_initial_ledger.py
docs/: architecture.md  manual-testing.md  privacy-and-publishing.md  provider-development.md  recovery.md
examples/: main_novel.yaml  multi_book.yaml
novelloom/: __init__.py  cli.py  config.py  engine.py  server.py
novelloom/api/: app.py  schemas.py
novelloom/domain/: __init__.py  enums.py
novelloom/exporters/: __init__.py  base.py  docx.py  markdown.py
novelloom/persistence/: __init__.py  database.py  models.py  repositories.py
novelloom/providers/: __init__.py  anthropic.py  base.py  gemini.py  http_helpers.py  mock.py  openai_compatible.py  registry.py  secrets.py
novelloom/services/: __init__.py  cascade.py  core.py  exporting.py  prompts.py  providers.py  reasoning.py  writing.py
novelloom/workflows/: __init__.py  story.py
scripts/: privacy_check.py
tests/: conftest.py  test_adapters.py  test_api.py  test_config_secrets.py  test_export.py  test_ledger.py  test_prompts_versions.py  test_providers.py  test_workflow.py
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css
web/src/components/: Dashboard.tsx  GraphStudio.tsx  Manuscripts.tsx  PromptSettings.tsx  ProviderSettings.tsx  Runs.tsx
