[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "novelloom"
version = "0.1.0"
description = "Graph-driven, multi-book AI fiction studio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "NovelLoom Contributors" }]
keywords = ["novel", "llm", "langgraph", "knowledge-graph", "writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "keyring>=25,<26",
    "langgraph>=1.0.10,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "networkx>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "python-docx>=1.1,<2",
    "pyyaml>=6,<7",
    "rich>=13.8,<15",
    "sqlalchemy>=2.0,<3",
    "sse-starlette>=2.1,<4",
    "typer>=0.12,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "mypy>=1.11,<2",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "types-networkx>=3.2,<4",
    "types-PyYAML>=6,<7",
]

[project.scripts]
ng = "novelloom.cli:app"

[project.entry-points."novelloom.providers"]
openai_compatible = "novelloom.providers.openai_compatible:OpenAICompatibleProvider"
anthropic = "novelloom.providers.anthropic:AnthropicProvider"
google_gemini = "novelloom.providers.gemini:GeminiProvider"

[tool.hatch.build.targets.wheel]
packages = ["novelloom"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "novelloom/web_dist"

[tool.hatch.build.targets.sdist.force-include]
"web/dist" = "web/dist"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
source = ["novelloom"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
disable_error_code = ["import-untyped"]
